name:                game-engine
version:             0.0.0.0
category:            Game
license:             BSD3
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:      lib
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base >=4.8 && <4.9
                       , transformers >=0.4 && <0.5
                       , mtl >=2.2 && <2.3
                       , lens >=4.12 && <4.13
                       , OpenGL >=2.12 && <2.13
                       , GLFW-b >=1.4 && <1.5
                       , GLUtil >=0.8 && <0.9
                       , FTGL   >=2.0 && <3.0
                       , colors >=0.3 && <0.4
    exposed-modules:     GameEngine
                       , GameEngine.Scene
                       , GameEngine.Sprite
                       , GameEngine.Sprite.Colored
                       , GameEngine.Sprite.Texture
                       , GameEngine.Sprite.Square
                       , GameEngine.Sprite.Label
    default-language:    Haskell2010
